--- a/config.org
+++ b/config.org
@@ -47,22 +47,25 @@ If you use OSX, the following binds fn to Hyper in Emacs. Consider using Karabin
 #+END_SRC
 
 Alternatively if you like your current setup, find a place to bind hyper as it's used for many personalized functions in this config.
-*** EXWM
+*** General
+- =fira-code=, a very nice, readable font. If you want to use something else, make sure to edit the init.el file.
+- A browser (this config uses =qutebrowser= and =tor-browser=)
+*** TODO EXWM
+NOTE: Much of the EXWM section is currently disabled until a later date. You can re-enable it if you wish.
+
 EXWM is a window manager with Emacs as its base. Everything is treated as a buffer, allowing us to use Emacs bindings across the entire system and keep "mode-switching" to a minimum.
  - =xorg-server=, the windowing system ubiquitous among Linux distros, though slowly being replaced by Wayland. Unfortunately, Emacs doesn't support Wayland as of yet, and there is no EXWM equivalent.
  - =pulsemixer=, a CLI/curses mixer for PulseAudio. Used for audio control functions.
  - =imagemagick=, a simple image suite we'll be using to take screenshots with.
- - =fira-code=, a very nice, readable font. If you want to use something else, make sure to edit the init.el file.
 **** Optional
- - A browser (this config uses =icecat=)
- - A composite manager (recommended, I use =compton=)
- - =noto-cjk=, to display foreign languages correctly
- - =slock=, if you want to lock the screen
+- A compositor (recommended, I use =compton=)
+- =noto-cjk=, to display foreign languages correctly
+- =slock=, if you want to lock the screen 
 *** TRAMP
 TRAMP (Transparent Remote Access, Multiple Protocols), is used to ssh into other users and machines. We'll primarily use it to make edits as root, but it's also incredibly useful for remote editing.
  - =sudo=, properly configured for your user.
-*** Bongo
-- =mpv=, to play music
+*** Mingus
+- =mpd=, to play music
 *** Programming
 You'll also need various programs for code completion, REPLs, and style guide enforcement.
 **** Package manager
@@ -98,14 +101,21 @@ mu4e is a bit special in that it requires its dependencies to have already been 
 *** On the format of the configuration
 This config file is saved as a .org file, which is a markup language and one of the best packages in Emacs. At launch, this file is stripped of all of its text save for sections labeled as emacs-lisp, which is then parsed into config.el and used. You can find some more info on Org-mode [[https://orgmode.org/manual/][here]], and my custom configuration in the [[Org]] section. As such, most sections have some sort of rambling attached explaining what the keybindings are, what packages I've added, why things are the way they are, etc. You should read through them to get the full benefit of the configuration. Also, if you do decide to download, try deleting these ramblings and filling them in with your own. Doing so helped me understand each part of the config, customize it further to my liking, and got me more familiar with the programs I was using.
 *** On the use case of this configuration
-This configuration is intended to not only be a full configuration for Emacs in terms of text editing/programming/themes/media/etc., but also a complete replacement for whatever window manager you use. However, because all of the configuration is divided into sections, it's relatively trivial to remove a portion you don't want (such as EXWM) without harming the rest of the configuration.
+This configuration is intended to be a full configuration for Emacs in terms of text editing/programming/themes/media/etc. However, because all of the configuration is divided into sections that rarely depend on each other, it's relatively trivial to remove a portion you don't want without harming the rest of the configuration.
 * Interface
-** Window Manager
- Everything surrounding EXWM is contained here, as well as a few extra controls which will only be accessible while Emacs is in focus.
-*** EXWM
+** TODO Window Manager
+TODO: There are several things that don't really work in EXWM that'd I'd consider essential, those being:
+- A working mpd player (EMMS processes tags incorrectly, Mingus causes blinking on non-emacs buffers while up on any workspace, Bongo doesn't use mpv correctly, non Emacs-native players not integrating well, etc.)
+- Dynamic window management (EXWM defaults to standard Emacs behavior, which is manual tiling)
+- A working IME (Fcitx refuses to work in Emacs. Apparently Ubuntu has a package that allows mozc to work inside Emacs but it isn't currently available on NixOS)
+- A bug where the first buffer you open in the first workspace will always be lost when switching to another workspace. This is pretty minor, but it's annoying to have to do the sacrificial ritual every time I restart.
+There are several packages that might fix these issues in the coming years, namely =edwina= and =EAF=, but they currently aren't compatible with EXWM or are too buggy. Until then, much of this section will be disabled and I'll continue with i3.
+
+Everything surrounding EXWM is contained here, as well as a few extra controls which will only be accessible while Emacs is in focus.
+*** TODO EXWM
 EXWM makes Emacs into your window manager, making the entire system far more consistent. Everything is Emacs, so your color scheme applies everywhere. EXWM can fake keypresses to other applications, so you can use the same keybindings everywhere. Everything is a buffer, so you can use your kill ring anywhere.
 **** Installation
-#+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
   (use-package exwm
     :ensure t
     :config
@@ -208,35 +218,35 @@ EXWM makes Emacs into your window manager, making the entire system far more con
     ;; this just enables exwm, it started automatically once everything is ready
     ;(exwm-enable)
     )
-#+END_SRC
++END_SRC
 
 **** Icecat
 Gives some useful keybinds while using GNU Icecat in EXWM. This is actually meant for Firefox, but I've modified it to work on Icecat instead. To use the original, download it [[https://github.com/ieure/exwm-firefox][here]], and the core [[https://github.com/walseb/exwm-firefox-core][here]].
-#+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
   (load "~/.emacs.d/custom/exwm-icecat.el")
   (require 'exwm-icecat)
-#+END_SRC
++END_SRC
 
-*** Launchers
+*** TODO Launchers
 **** dmenu for Emacs
 A great little application launcher that works with helm.
- #+BEGIN_SRC emacs-lisp
+ +BEGIN_SRC emacs-lisp
    (use-package dmenu
      :ensure t
      :bind
        ("s-SPC" . 'dmenu))
- #+END_SRC
+ +END_SRC
 
 **** Various processes
 A few useful processes linked to keybinds. The shutdown bind is every modifier key + p, so that you never accidently press it.
- #+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
    (defun exwm-async-run (name)
      (interactive)
      (start-process name nil name))
 
    (defun daedreth/launch-browser ()
      (interactive)
-     (exwm-async-run "icecat"))
+     (exwm-async-run ""))
 
    (defun daedreth/lock-screen ()
      (interactive)
@@ -249,13 +259,13 @@ A few useful processes linked to keybinds. The shutdown bind is every modifier k
    (global-set-key (kbd "<H-tab>") 'daedreth/launch-browser)
    (global-set-key (kbd "<H-s-l>") 'daedreth/lock-screen)
    (global-set-key (kbd "<H-s-C-M-p>") 'daedreth/shutdown)
- #+END_SRC
++END_SRC
 
-*** Audio controls
+*** TODO Audio controls
 A set of controls/settings to manipulate audio from inside Emacs.
 **** Volume
  Some functions we'll be using in a second to mute/raise/lower volume. The volume modifier describes how much the volume will be raised or lowered by.
- #+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
  (defconst volumeModifier "2")
    (defun audio/mute ()
      (interactive)
@@ -268,21 +278,21 @@ A set of controls/settings to manipulate audio from inside Emacs.
    (defun audio/lower-volume ()
      (interactive)
      (start-process "lower-volume" nil "pulsemixer" "--change-volume" (concat "-" volumeModifier)))
- #+END_SRC
++END_SRC
 
 **** Audio Keybindings
  I have a couple dedicated audio keys on my keyboard, which I bind the above functions to here. That being said, these are the only dedicated audio keys I have, so other audio keybinds (like those defined in [[Media]]) are bound to function keys.
- #+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
  (global-set-key (kbd "<XF86AudioMute>") 'audio/mute)
  (global-set-key (kbd "<XF86AudioRaiseVolume>") 'audio/raise-volume)
  (global-set-key (kbd "<XF86AudioLowerVolume>") 'audio/lower-volume)
- #+END_SRC
++END_SRC
 
-*** Screenshots
+*** TODO Screenshots
 Gives us basic screenshot capabilities.
 **** Screenshotting the entire screen
 Bound to <Print Screen>.
- #+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
    (defun daedreth/take-screenshot ()
      "Takes a fullscreen screenshot of the current workspace"
      (interactive)
@@ -297,11 +307,11 @@ Bound to <Print Screen>.
                 (concat (getenv "HOME") "/" (subseq (number-to-string (float-time)) 0 10) ".png"))
      (message "Screenshot taken!")))
    (global-set-key (kbd "<print>") 'daedreth/take-screenshot)
- #+END_SRC
++END_SRC
 
 **** Screenshotting a region
 Bound to <Scroll Lock>, which I can practically guarantee you don't use.
- #+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
    (defun daedreth/take-screenshot-region ()
      "Takes a screenshot of a region selected by the user."
      (interactive)
@@ -311,13 +321,13 @@ Bound to <Scroll Lock>, which I can practically guarantee you don't use.
                    (concat (getenv "HOME") "/" (subseq (number-to-string (float-time)) 0 10) ".png"))
      (call-process "rm" nil nil nil ".newScreen.png")))
    (global-set-key (kbd "<Scroll_Lock>") 'daedreth/take-screenshot-region)
- #+END_SRC
++END_SRC
 
 *** Default browser
- I use Icecat, though that might change when one of the keyboard-focused browsers (qutebrowser, next, etc.) gets proper uBlock/uMatrix support.
+I use a combination of Qutebrowser and Tor Browser. Qutebrowser now has basic adblocking/uMatrix(jMatrix) support, making it viable for everyday browsing. However it's still fairly rocky and doesn't block everything, so if I need more privacy/blocking I fall back to the Tor Browser.
  #+BEGIN_SRC emacs-lisp
    (setq browse-url-browser-function 'browse-url-generic
-         browse-url-generic-program "firefox")
+         browse-url-generic-program "qutebrowser")
  #+END_SRC
 
 ** Moving around Emacs
@@ -1317,10 +1327,64 @@ Elfeed is an RSS news feed with tagging, searching, auto-downloads, the works.
   (global-set-key (kbd "H-f") 'elfeed)
 #+END_SRC
 
-** Bongo
+** Mingus
+Mingus allows us to control MPD from within Emacs. Use =H-p= to reach its various functions.
+#+BEGIN_SRC emacs-lisp
+  (use-package mingus
+    :ensure t
+    :bind
+    ("H-p p" . mingus)
+    ("H-<f5>" . mingus-previous)
+    ("H-<f8>" . mingus-next)
+    ("H-<f6>" . mingus-pause)
+    ("H-<f7>" . mingus-stop))
+#+END_SRC
+
+*** MPD
+Since EMMS will be using MPD to play music, it's also nice to have some controls we can easily use.
+**** MPC Setup
+#+BEGIN_SRC emacs-lisp
+  (setq mpc-host "localhost:6600")
+#+END_SRC
+
+**** Starting the daemon from within Emacs
+#+BEGIN_SRC emacs-lisp
+  (defun mpd/start-music-daemon ()
+    "Start MPD, connects to it and syncs the metadata cache."
+    (interactive)
+    (shell-command "mpd")
+    (mpd/update-database)
+    (emms-player-mpd-connect)
+    (emms-cache-set-from-mpd-all)
+    (message "MPD Started!"))
+  (global-set-key (kbd "H-p c") 'mpd/start-music-daemon)
+#+END_SRC
+
+**** Killing the daemon from within Emacs
+#+BEGIN_SRC emacs-lisp
+  (defun mpd/kill-music-daemon ()
+    "Stops playback and kill the music daemon."
+    (interactive)
+    (emms-stop)
+    (call-process "killall" nil nil nil "mpd")
+    (message "MPD Killed!"))
+  (global-set-key (kbd "H-p k") 'mpd/kill-music-daemon)
+#+END_SRC
+
+**** Updating the database easily
+#+BEGIN_SRC emacs-lisp
+  (defun mpd/update-database ()
+    "Updates the MPD database synchronously."
+    (interactive)
+    (call-process "mpc" nil nil nil "update")
+    (message "MPD Database Updated!"))
+  (global-set-key (kbd "H-p u") 'mpd/update-database)
+#+END_SRC
+
+** TODO Bongo
 Bongo allows us to listen to music in Emacs. Use =H-p= or =H-<F5-8>= to reach its various functions.
 This may change to another music player at a later date, specifically one that supports MPD. However, EMMS reads tags wrong and doesn't have the functionality I want, while Mingus flickers all other buffers in EXWM. Other MPD players were similarly buggy.
-#+BEGIN_SRC emacs-lisp
++BEGIN_SRC emacs-lisp
   (use-package bongo
     :ensure t
     :bind
@@ -1330,8 +1394,7 @@ This may change to another music player at a later date, specifically one that s
     ("H-<f8>" . bongo-next)
     ("H-<f6>" . bongo-pause/resume)
     ("H-<f7>" . bongo-start/stop))
-#+END_SRC
-
++END_SRC
 * Theming
 Theming is done last as some of the hooks (namely delimiters) won't work when placed earlier in the config.
 ** Basic Interface Settings
